--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "init": "npx tambo init"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.37.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-popover": "^1.1.15",
+    "@tabler/icons-react": "^3.36.1",
     "@tailwindcss/oxide": "^4.1.17",
     "@tambo-ai/react": "^0.70.0",
     "@tambo-ai/typescript-sdk": "^0.84.0",
